Alignment in fixed position of nav bar

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,24 +1,33 @@
 .navbar {
-  position:fixed;
+  position: fixed;
+  overflow:hidden;
+  
   top: 0;
-  left: 0;
   border: 1px solid rgba(0, 0, 0, 0.15);
   background: #fff;
-  width: 1440px;
+  width: 100%;
   height: 87px;
   left: 1px;
 }
-.logo {
-  padding-top: 20px;
+.navbar2 {
+  margin-top: 4%;
+  position: fixed;
+  left: 0;
+  border: 1px solid rgba(0, 0, 0, 0.15);
+  background: #fff;
+  width: 100%; /* Full width */
+  height: 87px;
+}
+.logopic{
+  padding-top: 5px;
   margin-left: 89px;
 }
 .box {
-  position: fixed;
   width: 349px;
   height: 45px;
   flex-shrink: 0;
   margin-left: 549px;
-  margin-top: 21px;
+  margin-top: -3%;
   fill: #fff;
   stroke-width: 1px;
   stroke: rgba(0, 0, 0, 0.11);
@@ -90,8 +99,9 @@
 }
 
 .airbnbyourhome {
+  position: fixed;
   margin-left: 1105px;
-  margin-top: 35px;
+  margin-top: -2.5%;
   color: #000;
   font-family: Inter;
   font-size: 14px;
@@ -99,14 +109,15 @@
   font-weight: 600;
 }
 .globe img {
-  position: absolute;
+position:fixed;
   width: 25px;
   height: 25px;
-  margin-top: -15px;
+  margin-top: -2.5%;
   margin-left: 1235px;
 }
 .rectangle3 {
-  margin-top: -28px;
+  position: fixed;
+  margin-top: -3.2%;
   margin-left: 1281px;
 
   width: 82px;
@@ -117,8 +128,9 @@
   background: #fff;
 }
 .ellipse1 {
+  position: fixed;
   margin-left: 1323px;
-  margin-top: -37px;
+  margin-top: -2.8%;
   background: black;
   border-radius: 9999px;
   width: 34px;
@@ -127,7 +139,8 @@
   fill: #000;
 }
 .ellipse2 {
-  margin-top: -35px;
+  position: fixed;
+  margin-top: -3%;
   margin-left: 1344px;
   width: 100%;
   height: 100%;
@@ -139,7 +152,7 @@
 }
 .icon-container {
   position: fixed;
-  top:100px;
+  top:12%;
   left: 0;
   display: flex;
   flex-direction: row;
@@ -170,9 +183,9 @@
   color: #000;
 }
 .ellipse5 {
-  position:fixed;
+position: fixed;
   margin-left: 1004px;
-  margin-top: 0.2%;
+  margin-top: 5.5%;
   width: 100%;
   height: 100%;
   background: rgba(217, 217, 217, 0);
@@ -186,14 +199,14 @@
   stroke: #000;
 }
 .line8 {
-  position:fixed;
-  margin-left: 1018px;
-  margin-top: 0.7%;
+position: fixed;
+  margin-left: 1022px;
+  margin-top: 6.4%;
   width: 50px;
   height: 50px;
 }
 .rectangle5 {
-  position:fixed;
+  position: fixed;
   text-align: center;
   line-height: 43px;
   width: 87px;
@@ -203,14 +216,14 @@
   border: 1px solid rgba(0, 0, 0, 0.18);
   background: rgba(217, 217, 217, 0);
   margin-left: 1070px;
-  margin-top: 25px;
+  margin-top: 5.5%;
 }
 .rectangle6 {
   position: fixed;
   line-height: 43px;
   text-indent: 5px;
   margin-left: 1180px;
-  margin-top: -43px;
+  margin-top: 5.5%;
   width: 225px;
   height: 44px;
   flex-shrink: 0;
@@ -219,9 +232,9 @@
   background: rgba(217, 217, 217, 0);
 }
 .rectangle7 {
-  position: fixed;
+ position: fixed;
   margin-left: 1360px;
-  margin-top: -35px;
+  margin-top: 6.3%;
   width: 34px;
   height: 22px;
   flex-shrink: 0;
@@ -239,7 +252,7 @@
   margin-right: 100px;
 }
 .image-row img {
-  margin-top: 80px;
+  margin-top: 50%;
   width: 320px;
   height: 320px;
   border-radius: 20px;
@@ -328,30 +341,9 @@
   color: black;
   text-decoration: none;
 }
-/* Existing styles... */
-
-.navbar2 {
-  position: fixed;
-  top: 0;
-  left: 0;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  background: #fff;
-  width: 100%; /* Full width */
-  height: 87px;
-}
-
-.navbar2 {
-  position: fixed;
-  top: 87px;
-  left: 0;
-  border: 1px solid rgba(0, 0, 0, 0.15);
-  background: #fff;
-  width: 100%; /* Full width */
-  height: 87px;
-}
 
 .logo {
-  position: absolute;
+
   padding-top: 20px;
   margin-left: 5%; 
 }
@@ -384,7 +376,7 @@
 }
 
 .textline4 {
-  position: relative;
+
   text-align: left;
   margin-top: 5px;
 }
@@ -392,10 +384,10 @@
 
 @media (max-width: 767px) {
   .box {
-    margin-left: 5%;
+    margin-left: 0%;
   }
 
   .airbnbyourhome {
-    margin-left: 5%;
+    margin-left: 0%;
   }
 }
